lang/tests/contract/common/ui/fail/35-invalid-interface-name-2.rs
use liquid_lang as liquid;

#[liquid::interface(name = "fn")]
mod foo {
    extern "liquid" {
        fn bar();
    }
}

fn main() {}